fix mystery whitespace

--- a/style.css
+++ b/style.css
@@ -10,6 +10,13 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+#canvas-holder {
+    height: 100%;
 }
 
 #titleSVG {
@@ -19,13 +26,6 @@ body {
     top: 0;
     mix-blend-mode: soft-light;
     pointer-events: none;
-}
-
-#canvas-holder {
-    /* position: fixed;
-    top: 0;
-    width: 100%;
-    height: 100%; */
 }
 
 .grid-container {
